# bletchley

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.js
.github/: extract-notes.mjs
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: entries.rs  mod.rs  replicon.rs  settings.rs  system.rs  timecodes.rs
src/api/: entries.js  index.js  replicon.js  settings.js  system.js  timecodes.js
src/assets/: style.css
src/components/capture/: QuickAddMini.vue  QuickCapture.vue
src/components/common/: TimecodePicker.vue
src/components/grid/: EntryEditor.vue  WeeklyGrid.vue
src/components/layout/: About.vue  StatusBar.vue  TotalsBar.vue  UpdatePrompt.vue  WhatsNew.vue  WindowControls.vue
src/components/search/: SearchEntries.vue
src/components/settings/: Settings.vue
src/components/timecodes/: TimecodeManager.vue  UnresolvedTray.vue
src/composables/: useEodReminder.js  useUpdater.js
src/lib/: changelog.js  dates.js  duration.js  fuzzy.js
src/store/: index.js
