[package]
name = "bletchley"
version = "1.0.0"
description = "Friction-free timesheet capture for Replicon"
authors = ["Callum"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bletchley_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# bundled = compile SQLite from source, so there's no system dependency.
rusqlite = { version = "0.32", features = ["bundled"] }
